# Bureau_de_vote

./: Cargo.toml  README.md
src/: main.rs
v010_spaghettis/: Cargo.toml
v020_configuration/: Cargo.toml
v020_configuration/src/: configuration.rs  main.rs
v021_app_builder/: Cargo.toml
v021_app_builder/src/: app_builder.rs  main.rs
v030_domain/: Cargo.toml
v030_domain/src/: app_builder.rs  domain.rs  main.rs
v040_memory/: Cargo.toml
v040_memory/src/: app_builder.rs  domain.rs  main.rs
v040_memory/src/storages/: memory.rs
v041_file/: Cargo.toml  test2.json
v041_file/src/: app_builder.rs  configuration.rs  domain.rs  lib.rs  main.rs  storage.rs
v041_file/src/storages/: file.rs
