[package]
resolver = "2"
name = "v041_file"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
tokio = { version = "1.43.0", features = ["full"] }
clap = { version = "4.5.27", features = ["derive"] }
async-trait = "0.1.86"
serde = { version = "1.0.217", features = ["derive"] }
derive = "1.0.0"
serde_json = "1.0.138"
